--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -478,6 +478,7 @@ jpn:
     # asset_amount: "Valeur nette comptable"
     # asset_depreciations: "Dépréciations d’immobilisation"
     # assets: "Immobilisations"
+    # assets_categories: "Catégories de produits avec immobilisation"
     # assimilated_taxes_amount: "Montant des taxes assimilées"
     # attorney: "Mandataire"
     # attorney_account: "Compte mandataire"
@@ -522,6 +523,7 @@ jpn:
     # charge_account: "Compte de charge"
     # charges_account: "Comptes de charge"
     # charges_accounts: "Comptes de charge"
+    # charges_categories: "Catégories de produits avec charge"
     # check_state: "Vérifier l’état"
     # children: "Enfants"
     # choice_value: "Valeur choix"
@@ -713,7 +715,6 @@ jpn:
     # iban: "IBAN"
     id: "唯一の番号"
     # identification_number: "Numéro d’identification"
-    # immobilizations_products: "Produits d’immobilizations"
     # importance: "Importance"
     # in_cash: "En espèce"
     # incident: "Incident"
@@ -947,6 +948,7 @@ jpn:
     # production: "Production"
     # productions: "Productions"
     # products: "Produits"
+    # products_categories: "Catégories de produits avec produit"
     # profession: "Profession"
     # proposer: "Parrain"
     # prorated: "Proratisé"
@@ -964,7 +966,6 @@ jpn:
     # purchase_items: "Lignes d’achat"
     # purchased_on: "Acheté le"
     # purchases: "Achats"
-    # purchases_products: "Produits d’achat"
     # quantity: "Quantité"
     # query: "Requête"
     # real_credit: "Real credit"
@@ -1017,7 +1018,6 @@ jpn:
     # sales: "Ventes"
     # sales_conditions: "Conditions Générales de Vente"
     # sales_invoices: "Factures"
-    # sales_products: "Produits de vente"
     # scheduled: "Encaissement programmé"
     # sender: "Expéditeur"
     # sent_at: "Expédié le"
@@ -1038,6 +1038,7 @@ jpn:
     # static_support: "Support statique"
     # status: "Status"
     # stock_account: "Compte de stock"
+    # stocks_categories: "Catégories de produits avec stock"
     # stopped_at: "Arrêté à"
     # stopped_on: "Arrêté le"
     # storable: "Gérer les stocks"
