--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -434,6 +434,7 @@ fra:
     asset_amount: "Valeur nette comptable"
     asset_depreciations: "Dépréciations d’immobilisation"
     assets: "Immobilisations" #?
+    assets_categories: "Catégories de produits avec immobilisation"
     assimilated_taxes_amount: "Montant des taxes assimilées"
     attorney: "Mandataire" #?
     attorney_account: "Compte mandataire" #?
@@ -483,6 +484,7 @@ fra:
     charge_account: "Compte de charge"
     charges_account: "Comptes de charge"
     charges_accounts: "Comptes de charge" #?
+    charges_categories: "Catégories de produits avec charge"
     check_state: "Vérifier l’état" #?
     children: "Enfants"
     choice_value: "Valeur choix"
@@ -694,7 +696,6 @@ fra:
     iban: "IBAN"
     id: "ID"
     identification_number: "Numéro d’identification"
-    immobilizations_products: "Produits d’immobilizations"
     importance: "Importance"
     in_cash: "En espèce"
     incident: "Incident"
@@ -937,6 +938,7 @@ fra:
     # production_support: "Production support"
     productions: "Productions"
     products: "Produits"
+    products_categories: "Catégories de produits avec produit"
     profession: "Profession"
     proposer: "Parrain"
     prorated: "Proratisé"
@@ -957,7 +959,6 @@ fra:
     # purchase_taxes: "Purchase taxes"
     purchased_on: "Acheté le"
     purchases: "Achats"
-    purchases_products: "Produits d’achat"
     quantity: "Quantité"
     query: "Requête"
     real_credit: "Real credit"
@@ -1019,7 +1020,6 @@ fra:
     sales: "Ventes"
     sales_conditions: "Conditions Générales de Vente"
     sales_invoices: "Factures"
-    sales_products: "Produits de vente"
     scheduled: "Encaissement programmé"
     sender: "Expéditeur"
     sent_at: "Expédié le"
@@ -1041,7 +1041,7 @@ fra:
     static_support: "Support statique"
     status: "Status"
     stock_account: "Compte de stock"
-    # stocks_products: "Stocks products"
+    stocks_categories: "Catégories de produits avec stock"
     stopped_at: "Arrêté à"
     stopped_on: "Arrêté le"
     storable: "Gérer les stocks"
