--- a/config/locales/fra/rights.yml
+++ b/config/locales/fra/rights.yml
@@ -29,6 +29,7 @@ fra:
     manage_buildings: "Gérer les lieux de stockage"
     manage_cash_transfers: "Gérer les virements internes"
     manage_cashes: "Gérer les comptes de trésorerie"
+    # manage_catalogs: "Manage catalogs"
     manage_custom_fields: "Gérer les champs personnalisés"
     manage_deposits: "Gérer les remises en banque"
     manage_districts: "Gérer les zones administratives"
@@ -54,7 +55,6 @@ fra:
     manage_outgoing_payment_modes: "Gérer les modes de décaissement"
     manage_outgoing_payments: "Gérer les décaissements"
     manage_prices: "Gérer les prix"
-    manage_product_price_listings: "Gérer les listes de prix"
     manage_productions: "Gérer les productions"
     manage_products: "Gérer les produits"
     manage_purchase_natures: "Gérer les types d’achat"
