--- a/config/locales/eng/rights.yml
+++ b/config/locales/eng/rights.yml
@@ -53,7 +53,7 @@ eng:
     manage_outgoing_payments: "Manage disbursements"
     manage_prices: "Manage prices"
     manage_product_categories: "Manage product categories" #?
-    manage_product_price_listings: "Manage product price listings"
+    manage_product_price_listings: "Manage product price listings" #?
     manage_productions: "Manage productions"
     manage_products: "Manage products"
     manage_purchase_natures: "Manage purchase natures"
