Generalizes use of reference_name as column name to use to point out procedure, nomenclature...

--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -1736,6 +1736,7 @@ arb:
     reduction_rate: "معدل الخصم" #?
     reduction_submissive: "خاضع للتخفيض" #?
     reductions: "طرق الخصومات"
+    # reference_name: "Reference name"
     # reference_number: "N°Référence"
     reflation_submissive: "خاضع لانعاش اقتصادي" #?
     # reflections: "Reflections"
