--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -557,7 +557,6 @@ fra:
       edit: "Modifier la profession\_: %{name}"
       index: "Professions"
       new: "Ajouter une nouvelle profession"
-      # show: "Show backend/profession"
     backend/purchase_items:
       edit: "Modifier une ligne de la commande"
       new: "Ajouter un produit à la commande"
@@ -2036,7 +2035,7 @@ fra:
     backend/logs: "{observed_at}"
     backend/matters: "{name} - {work_number}"
     backend/observations: "{content}"
-    backend/operations: "{position} ({started_at})"
+    backend/operations: "{reference_name} ({started_at})"
     backend/plants: "{name} - {work_number}"
     backend/product_indicators: "{id}"
     backend/product_memberships: "{started_at}"
