--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -987,6 +987,7 @@ spa:
     # reduction_origin: "Ligne soumise à réduction"
     # reduction_percentage: "Pourcentage de réduction"
     # reductions: "Lignes de réductions"
+    # reference_name: "Reference name"
     # reference_number: "N°Référence"
     # reflections: "Reflections"
     # remaining_duration: "Durée d’utilisation prévue (heures)"
