--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -610,6 +610,7 @@ jpn:
     # deduction_account: "TVA déductible"
     # deduction_taxes: "TVA déductible"
     # default_mail_address: "Adresse email par défaut"
+    # default_storage: "Default storage"
     # deferred_payment: "Crédit à reporter"
     # deleted_at: "Supprimé le"
     # deliverable: "Livrable"
