--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -657,10 +657,28 @@ fra:
     document_natures:
       items:
         activity_cost: "Coût de production par activité et intervention"
+        animal: "Animal"
         animal_husbandry_registry: "Registre d'élevage"
+        balance: "Balance"
+        balance_sheet: "Bilan comptable"
+        deposit: "Remise en banque"
+        entity: "Personne"
+        financial_year: "Exercice comptable"
+        general_journal: "Journal général"
+        general_ledger: "Grand livre"
+        income_statement: "Compte de résultat"
+        inventory: "Inventaire"
+        journal: "Journal"
         manure_management_plan: "Plan de fumure"
+        other: "Auter"
         phytosanitary_registry: "Registre phytosanitaire"
         profit_and_loss_statement: "Compte de résultat"
+        purchase_order: "Achat"
+        sales_estimate: "Devis de vente"
+        sales_invoice: "Facture de vente"
+        sales_order: "Commande de vente"
+        stocks: "Stocks"
+        transport: "Transport"
         veterinary_booklet: "Carnet vétérinaire"
     entity_natures:
       items:
@@ -691,6 +709,7 @@ fra:
           bolting: "Montaison"
           covered: "Sol couvert"
           depletion: "Tarie"
+          female: "Femelle"
           first_growth: "Croissance initiale"
           flowering: "Floraison"
           gain_senescence: "Senescence du grain"
@@ -700,7 +719,9 @@ fra:
           healthy: "Sain"
           heat: "Chaleurs"
           lactation: "En lactation"
+          male: "Mâle"
           maturity: "Maturation"
+          mixt: "Mixte"
           negative: "Négatif"
           positive: "Positif"
           pregnancy: "Pleine"
@@ -710,6 +731,15 @@ fra:
           sick: "Malade"
           swelling: "Gonflement"
           tillering: "Tallage"
+        datatype:
+          boolean: "Case à cocher"
+          choice: "Liste de choix"
+          decimal: "Chiffre (décimal)"
+          geometry: "Forme spatiale"
+          measure: "Mesure"
+          multi_polygon: "Multi-polygone spatial"
+          point: "Point spatial"
+          string: "Texte"
       items:
         animal_disease_state: "Phase du bioprocessus de maladie d’un animal"
         animal_life_state: "Phase du bioprocessus de vie d’un animal"
@@ -1019,6 +1049,11 @@ fra:
         unit: "Unité"
         variable_indicators: "Indicateurs variables"
         variety: "Variété"
+      choices:
+        population_counting:
+          decimal: "Décimal"
+          integer: "Entier"
+          unitary: "Unitaire"
       items:
         additive: "Adjuvant"
         animal_building: "Bâtiment dédié aux animaux"
