--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -1035,6 +1035,7 @@ fra:
     changes_reflected: "Changements répercutés"
     check: "Vérifier"
     check_fields: "Vous devez cocher au moins une case pour effectuer la modification"
+    children: "Descendance"
     childrens: "Enfants"
     choice_options: "Indicateur avec liste de choix"
     choices: "Choix"
@@ -1218,6 +1219,7 @@ fra:
       other: "Temps d’utilisation total\_: %{count} heures"
     iban: "Numéro de compte bancaire internationale (IBAN)"
     identification: "Identification"
+    illness: "Maladies"
     immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
     import: "Importer"
     import_backup: "Import de fichier de sauvegarde"
@@ -1237,6 +1239,7 @@ fra:
     indicator: "Indicateur"
     indicator_value: "Valeur de l'indicateur"
     indicators: "Indicateurs"
+    indicators_evolutions: "Evolutions des indicateurs"
     inel_index: "Index génétique INEL"
     info: "Information\_: %{value}"
     infos: "Information générales"
